src/index.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");



@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --antd-font-family: "Roboto", sans-serif; /* Override default Ant Design font */
}

* {
    line-height: 1.3;
    /* overflow: hidden; */

    font-weight: 550;
    font-style: normal;
    font-family: "Roboto", sans-serif !important;

}

.ant-typography,
.ant-btn,
.ant-btn-primary {
    font-family: "Roboto", sans-serif !important;
}

